[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tower = "0.5.1"
tower-http = { version = "0.5.2", features = [
    "cors",
    "trace",
    "compression-full",
    "timeout",
    "auth",
    "catch-panic"
] }

tokio = { version = "1.46.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate"      
] }

dotenvy = "0.15.7"

jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
rand = "0.8.5"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.95"
thiserror = "1.0.65"

axum-extra = { version = "0.9.2", features = ["json-lines"] }

validator = { version = "0.18.1", features = ["derive"] }

